--- a/web-doc/datos/fuentes_de_datos/index.html
+++ b/web-doc/datos/fuentes_de_datos/index.html
@@ -412,6 +412,14 @@
 <td>Dirección General del Catastro</td>
 </tr>
 <tr>
+<td>mun10037</td>
+<td>Ayuntamiento de Cáceres</td>
+</tr>
+<tr>
+<td>mun28079</td>
+<td>Ayuntamiento de Madrid</td>
+</tr>
+<tr>
 <td><br /></td>
 <td></td>
 </tr>
