Cambios en modelo de datos
Se modifica la descripción código postal y se arreglan hipervinculaciones que estaban mal en la página.

--- a/datos/modelo_de_datos/index.html
+++ b/datos/modelo_de_datos/index.html
@@ -814,7 +814,7 @@
           </tr>
           </tbody>
           </table>
-          <p>Su uso es obligatorio cuando el registro de datos corresponde a una dirección (<a href="../../datos/modelo_de_datos/#410-tipo-de-dato"><code>TIPDATO</code></a>=<em>Dirección</em>), y dicha dirección es oficial (<a href="../../datos/modelo_de_datos/#411-estado"><code>ESTADO</code></a>=<em>Oficial</em>), no siendo necesario en los registros cuyo tipo de dato (<a href="../../datos/modelo_de_datos/#410-tipo-de-dato"><code>TIPDATO</code></a>=<em>Dirección</em>), no siendo necesario en los registros cuyo tipo de dato (<a href="../../datos/modelo_de_datos/#410-tipo-de-dato"><code>TIPDATO</code></a>)  sea <em>Topónimo, POI </em>o la tipología (<a href="../../datos/modelo_de_datos/#411-estado"><code>ESTADO</code></a>) de la dirección sea <em>Normalizado, Histórico u Otro.</em></p>
+          <p>Su uso es obligatorio cuando el registro de datos corresponde a una dirección (<a href="../../datos/modelo_de_datos/#410-tipo-de-dato"><code>TIPDATO</code></a>=<em>Dirección</em>), y dicha dirección es oficial (<a href="../../datos/modelo_de_datos/#411-estado"><code>ESTADO</code></a>=<em>Oficial</em>), no siendo necesario en los registros cuyo tipo de dato (<a href="../../datos/modelo_de_datos/#410-tipo-de-dato"><code>TIPDATO</code></a>)  sea <em>Topónimo, POI </em>o la tipología (<a href="../../datos/modelo_de_datos/#411-estado"><code>ESTADO</code></a>) de la dirección sea <em>Normalizado, Histórico u Otro.</em></p>
           <p>No incluir separador de millares.</p>
           <p><br></p>
           <h4 id="47-unidades-administrativas">4.7 Unidades Administrativas</h4>
